# QTWeatherAnalysis

./: CMakeLists.txt  main.cpp  resources.qrc
resources/styles/: style_day.qss  style_night.qss
src/data/: dbmanager.cpp  dbmanager.h  weatherdata.h
src/network/: weathermanager.cpp  weathermanager.h
src/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/utils/: jsonhelper.cpp  jsonhelper.h
